fixed one class name & finished questions section mobile responsive

--- a/style-mobile.css
+++ b/style-mobile.css
@@ -246,6 +246,7 @@ header {
   text-decoration: none;
   color: #072ac8;
   margin: 100px 0;
+  align-items: flex-end;
 }
 
 /* ---------------------OPINIONS SECTION MOBILE--------------------- */
@@ -350,6 +351,85 @@ header {
   background-repeat: no-repeat;
 }
 
+/* ---------------------QUESTIONS SECTION MOBILE--------------------- */
+.questions {
+  background-color: #ffc600;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 50px 30px;
+}
+.questions-h1 {
+  color: #292e47;
+  margin-bottom: 20px;
+  font-size: 1.9em;
+  line-height: 1.5em;
+}
+
+.questions > p {
+  color: #292e47;
+  font-size: 1em;
+  line-height: 20px;
+}
+.form-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+}
+.form-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+}
+.container-email {
+  position: relative;
+}
+
+.email-icon {
+  position: absolute;
+  left: 8%;
+  top: 30%;
+  right: auto;
+  bottom: auto;
+  width: 30px;
+  height: 30px;
+}
+
+.input-email {
+  height: 80px;
+  padding: 12px 8px 12px 70px;
+  font-size: 1.1em;
+  line-height: 1.5;
+  color: #292e47;
+  background-color: #fff;
+  border: none;
+}
+
+.input-email:focus {
+  outline: none !important;
+  border: 1px solid #f2f4fc;
+  box-shadow: 0 0 5px #6b708d;
+}
+.button-submit {
+  margin-top: 20px;
+  background-color: #072ac8;
+  color: #ffffff;
+  border: none;
+  padding: 29px 61px;
+  font-weight: 500;
+  font-size: 1.1em;
+}
+.button-submit:hover {
+  background-color: #292e47;
+}
+.form-done,
+.form-fail {
+  display: none;
+}
+
 /* --------------MEDIA QUERIES ---------------- */
 
 @media only screen and (min-width: 375px) {
@@ -392,6 +472,10 @@ header {
   }
   .opinions-h2 {
     font-size: 2.6em;
+  }
+
+  .input-email {
+    width: 400px;
   }
 }
 
@@ -499,6 +583,37 @@ header {
     bottom: 5%;
     width: 100px;
     height: 100px;
+  }
+
+  .questions_h1 {
+    font-size: 2.5em;
+  }
+  .formContent {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .buttonSubmit {
+    margin-top: 0;
+    margin-left: 20px;
+  }
+  .footSection {
+    margin-top: 60px;
+    padding: 0 30px 100px 30px;
+  }
+  .footContainer {
+    flex-direction: row;
+    justify-content: space-between;
+    text-align: left;
+    padding: 0 10px;
+  }
+  .footContent {
+    width: 40%;
+  }
+  .footLinks {
+    margin-top: 0px;
+    align-self: flex-start;
+    row-gap: 50px;
   }
 }
 
@@ -633,5 +748,9 @@ header {
   .logos-grid {
     grid-column-gap: 120px;
     justify-content: space-between;
+  }
+
+  .project-section {
+    padding: 0;
   }
 }
